# HealthHive

./: BACKEND_ROADMAP.md  INTEGRATION_ARCHITECTURE.md  README.md  RELEASE_PROCESS.md  TAURI_SETUP.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: native-builds.yml  release.yml
scripts/: collect-native-artifacts.mjs  tauri-runner.mjs
src/: main.jsx  router.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
src/auth/: AuthProvider.jsx  roleRoutes.js
src/components/: Button.jsx  Card.jsx  Chips.jsx  Input.jsx  button.css  chips.css  input.css
src/data/: DemoDataProvider.jsx  demoDataContext.js  useDemoData.js
src/layouts/: AppShell.jsx
src/screens/admin/: AdminDashboard.jsx
src/screens/auth/: LoginPage.jsx  auth.css
src/screens/marketing/: LandingPage.jsx  marketing.css
src/screens/patient/: PatientHistory.jsx  PatientHome.jsx  PatientResults.jsx  PatientSubmit.jsx  patient.css
src/screens/provider/: ProviderDashboard.jsx
src/styles/: global.css  theme.css
